[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentgauge"
dynamic = ["version"]
description = "Static governance scanner for MCP servers and AI agent tool-calling code — a linter for the OWASP Agentic Top 10."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Preetham Noel P" }]
keywords = [
    "mcp",
    "ai-agents",
    "security",
    "static-analysis",
    "governance",
    "linter",
    "owasp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/PreethamNoelP/agentgauge"
Issues = "https://github.com/PreethamNoelP/agentgauge/issues"

[project.scripts]
agentgauge = "agentgauge.cli:main"

[tool.setuptools]
packages = ["agentgauge", "agentgauge.rules"]

[tool.setuptools.dynamic]
version = { attr = "agentgauge.__version__" }